tested functionality of login, logout, tweets, signup

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,15 +1,2 @@
+Welcome <%= @user.username %>
 
-
-<% tweets.each do |tweet| %>
-  <!-- each tweet should include a link to edit -->
-  <%= tweet.content %>
-<% end %>
-
-
-
-
-
-<!-- logout form -->
-<form action="/users/logout" method="post">
-  <input type="submit" name="logout">Log Out</input>
-</form>
