--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,7 +1,7 @@
 User Signup Form
-<form action="______" method="post">
-  <input type="text" name="user[email]" placeholder="Email">
-  <input type="text" name="user[username]" placeholder="Username">
-  <input type="text" name="user[password]" placeholder="Password">
+<form action="/signup" method="post">
+  <input type="text" name="email" placeholder="Email">
+  <input type="text" name="username" placeholder="Username">
+  <input type="text" name="password" placeholder="Password">
   <input type="submit" name="submit">Create User</input>
 </form>
