--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,6 @@
 Please Login
 
-<form action="______" method="post">
+<form action="/login" method="post">
   <input type="text" name="user[username]" placeholder="Username">
   <input type="text" name="user[password]" placeholder="Password">
   <input type="submit" name="submit">Log In</input>
