--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 Please Login
 
 <form action="/login" method="post">
-  <input type="text" name="user[username]" placeholder="Username">
-  <input type="text" name="user[password]" placeholder="Password">
+  <input type="text" name="username" placeholder="Username">
+  <input type="text" name="password" placeholder="Password">
   <input type="submit" name="submit">Log In</input>
 </form>
