--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,5 +3,5 @@ Please Login
 <form action="/login" method="post">
   <input type="text" name="username" placeholder="Username">
   <input type="text" name="password" placeholder="Password">
-  <input type="submit" name="submit">Log In</input>
+  <input type="submit" name="submit" id="submit">Log In</input>
 </form>
