--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,4 +1,4 @@
-Current Tweet Content:
+Tweet Content:
 <%= @tweet.content %>
 
 Edit this Tweet:
@@ -6,10 +6,3 @@ Edit this Tweet:
   <input type="text" name="content" id="content">
   <input type="submit" name="submit" id="submit">
 </form>
-
-
-
-<!-- logout form -->
-<!-- <form action="/users/logout" method="post">
-  <input type="submit" name="logout">Log Out</input>
-</form> -->
