--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,5 +1,5 @@
 <h1>Log In:</h1>
-<form action="/sessions" method="post">
+<form action="/login" method="post">
   <label for="username">Username:</label>
   <input type="text" name="username" id="username"><br>
   <label for="password">Password:</label>
