--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,10 @@
-<% if logged_in? %>
-  <% Tweet.all.each do |tweet| %>
-    <%= tweet.content %>
+<% if @tweets.empty? %>
+  <h2>Your feed is empty.</h2>
+<% else %>
+  <h2>Twitter Feed:</h2>
+  <% @tweets.each do |tweet| %>
+    <ul>
+      <li><%= tweet.content %></li>
+    </ul>
   <% end %>
 <% end %>
