--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -3,7 +3,10 @@
   <%= @tweet.content %>
   <% if current_user == @tweet.user.username %>
     <br></br>
-    <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a> <!-- TODO -->
-    <a href="#">Delete Tweet</a> <!-- TODO -->
-    <% end %>
+    <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+  <% end %>
+  <form action="/tweets/<%= @tweet.id %>/delete" method="post">
+    <input id="hidden" type="hidden" name="_method" value="delete">
+    <input type="submit" value="Delete Tweet">
+  </form>
 <% end %>
