--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,1 +1,9 @@
-Welcome,
+<h2>Welcome, <%=@user.username%></h2><br>
+
+<p>tweeting!</p>
+
+<h2>Here are your tweets:</h2><br>
+<%@user.tweets.each do |t|%>
+  <li>look at this tweet<br>
+  <a href="/tweets/<%=t.id%>"><%=t.content%></a></li>
+<% end %><br>
