--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,5 @@
 <form action="/login" method="POST">
   <input type="text" name="username">
-  <input type="text" name="email">
   <input type="text" name="password">
-  <input type="submit" name="submit">
+  <input type="submit" name="submit" value="submit" id="submit">
 </form>
