--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -4,5 +4,5 @@
 
 <form method="POST" action="/tweets/<%=@tweet.id%>/delete">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="Delete Tweet">
+  <input type="submit" name="submit" id="Delete Tweet" value="Delete Tweet">
 </form>
