--- a/app/views/users/create.erb
+++ b/app/views/users/create.erb
@@ -6,5 +6,5 @@
   <input type="text" name="email" id="email"><br>
   <label for="password">Password:</label>
   <input type="password" name="password" id="password"><br>
-  <input type="submit" name="name" value="Create User">
+  <input type="submit" value="Create User">
 </form>
