--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,8 +5,8 @@
   </head>
 
   <body>
-    <% if !!session[:user] %>
-      Welcome, <%= "#{current_user}" %>!
+    <% if logged_in? %>
+      Welcome, <%= "#{current_user.username}" %>!
       <a href="/logout">Sign Out</a><br>
     <% else %>
       Welcome!
