--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -2,7 +2,7 @@
 
 <form action="/tweets" method="POST">
   <label for="content">Content:</label>
-  <textarea id="content" name="content" rows="1" cols="40"></textarea>
+  <input type="text" name="content" id="content">
   <br></br>
   <input type="submit" value="submit">
 </form>
