--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,10 @@
 <h3>Log in to Fwitter:</h3>
+<form action="/login" method="post">
+  <label for="username">Username:</label>
+  <input type="text" name="username" id="username">
+  <br>
+  <label for="password">Password:</label>
+  <input type="password" name="password" id="password">
+  <br></br>
+  <input type="submit" value="Log in">
+</form>
