--- a/sinatra-fwitter-group-project-v-000-master/app/views/tweets/create_tweet.erb
+++ b/sinatra-fwitter-group-project-v-000-master/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
-<h2>Add a tweet</h2>
+<h2>add a tweet</h2>
 <form action="/tweets" method="POST">
   <p>Status: <input type="text" name="content"></p>
   <input type="submit" value="submit">
