--- a/sinatra-fwitter-group-project-v-000-master/app/views/users/login.erb
+++ b/sinatra-fwitter-group-project-v-000-master/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<h1>Login to Fwitter!</h1>
+<h1>Login</h1>
 <form method="post" action="/login">
   <input type="text" name="username" placeholder="username">
   <input type="text" name="password" placeholder="password">
