--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,4 +1,4 @@
-<h3>Username:</h3>
+<h3>Author: <%=@tweet.user.username%></h3>
 
 <form action="/tweets/<%=@tweet.id%>" method="post">
   <input type="hidden" id="hidden" name="_method" value="patch">
@@ -9,3 +9,4 @@
   <br></br>
   <input type="submit" value="submit">
 </form>
+<a href="/tweets/<%=@tweet.id%>">Return</a>
