--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,5 +1,12 @@
-<h3>All Tweets</h3>
+<h3>Welcome, to Fwitter <%=current_user.username%>!</h3>
 
 <% Tweet.all.each do |tweet| %>
-  <a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a>
+  <b><%=tweet.user.username%>:</b> <a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a>
+  <br></br>
 <% end %>
+
+<h5><a href="/tweets/new">New Tweet</a> </h5>
+
+<h5><a href="/users">View Users</a> </h5>
+
+<h5><a href="/logout">Log Out</a></h5>
