--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,4 +1,4 @@
-<h3>Create New Tweet:</h3>
+<h3>Create New Tweet for: <%=current_user.username%></h3>
 
 <form action="/tweets" method="POST">
   <label for="content">Content:</label>
@@ -6,3 +6,5 @@
   <br></br>
   <input type="submit" value="submit">
 </form>
+
+<a href="/tweets">Return to tweets</a>
