--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,5 +6,7 @@
   <label for="password">Password:</label>
   <input type="password" name="password" id="password">
   <br></br>
-  <input type="submit" value="Log in">
+  <input type="submit" value="submit">
 </form>
+
+Don't have an account yet? <a href="/signup">Sign up</a>
