--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,8 +1,10 @@
 <h1>Tweet</h1>
 <%=@tweet.content%>
 
-<form action='/tweets/<%=@tweet.id%>/delete' method='post'>
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
 
-<input type='hidden' id='hidden' name='_method' value='DELETE'>
+<input type="hidden" id="hidden" name="_method" value="DELETE">
 <input type='submit' value="Delete Tweet">
-</form>
+</form> 
+
+<a href='/tweets/<%=@tweet.id%>'>Edit Tweet</a>
