--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -2,5 +2,5 @@
 <input type='text' name='username' placeholder='Username'><br>
 <input type='text' name='email' placeholder="Email"><br> 
 <input type='password' name='password' placeholder="Password"><br>
-<input type='submit' value='submit' id='submit'>Sign Up</input>
+<input type='submit' value='Sign Up' id='submit'></input>
 </form>
