--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
 <form action='/tweets/new' method='post'>
 <input type='text' name='content' id='content'>
-<input type='submit' value='submit' id='submit'>Tweet</input>
+<input type='submit' value='Tweet' id='submit'></input>
 </form>
