--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,6 +1,9 @@
 <form action='/tweets/<%=@tweet.id%>' method='post'>
 <input type='hidden' id='hidden' name='_method' value='patch'>
-
+<label for='content'>Edit Tweet:</label>
 <input type='text'  name='content' value='<%=@tweet.content%>' id='content'>
+<br></br>
 <input type='submit' value='submit' id='submit'>
 </form>
+<br></br>
+<a href="/tweets/<%=@tweet.id%>">Return</a>
