--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,10 +1,12 @@
 <h1>Tweet</h1>
 <%=@tweet.content%>
-
+<br><br>
 <form action="/tweets/<%= @tweet.id %>/delete" method="post">
 
 <input type="hidden" id="hidden" name="_method" value="DELETE">
 <input type='submit' value="Delete Tweet">
 </form> 
-
-<a href='/tweets/<%=@tweet.id%>'>Edit Tweet</a>
+<br></br>
+<a href='/tweets/<%=@tweet.id%>/edit'>Edit Tweet</a>
+<br></br>
+<a  href='/tweets'>Go back home</a>
