--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,10 +1,15 @@
 Welcome, <%= current_user.username%>
   <br>
-  <%Tweet.all.each do |tweet| %>
-    <b><%=tweet.user.username%>:<a href='/tweets/<%=tweet.id%>'><%=tweet.content%></a>;</h3>
-   <%end%>
   
-<br>
-<a href="/tweets/new">New Tweet</a><br></br>
-<a href='/users'>View Users</a>
-<p><a href='/logout'>Log Out</a></p>
+  <ul>
+    <%@tweets.all.each do |tweet|%>
+    <li>
+    <%=tweet.user.username%>:<a href='/tweets/<%=tweet.id%>'><%=tweet.content%></a>;</h3>
+    <%end%>
+    </li>
+  </ul>
+
+<ul>
+<a href="/tweets/new">New Tweet</a>
+<a href='/logout'>Log Out</a>
+</ul>
