--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,8 @@
-index.erb
+ 
+<h1>Welcome to Fwitter!</h1>
+
+<a class="button" href="/users/login">Login!</a>
+<a class="button" href="/users/create">Signup!</a>
+
+
+  
