--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,1 +1,8 @@
-edit.erb
+<h1> Edit Tweet:</h1>
+
+<form method="POST" action="/tweets/<%=@tweet%>">
+<input id="hidden" type="hidden" name="_method" value="PATCH">
+<label>Whatcha' wannna change</label>
+<input type="text" name="content"><br>
+<input type="submit" value="submit"><br>
+</form>
