--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,1 +1,11 @@
-layout.erb
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+  </head>
+
+  <body>
+    <%= yield %><br><br>
+    <a href="/"><h8>Home</h8></a> 
+  </body>
+</html>
