--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,1 +1,7 @@
-new.erb
+<h1>New Tweet:</h1>
+
+<form method="POST" action="/new" >
+<label>Whatcha' got to say?</label>
+<input type="text" name="content"><br>
+<input type="submit" value="submit"><br>
+</form>
