--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,1 +1,12 @@
-create_user.erb
+<h1>Sign Up Below:</h1>
+
+<form action='/create_user' method="POST">
+Name:
+<input type="text" name="User Name"><br>
+Email:
+<input type="text" name="email"><br>
+Password:
+<input type="password" name="password"><br>
+
+<input type="submit" value="Sign Up">
+</form>
