--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,17 @@
-login.erb
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">  
+  </head>
+  <body id="page-top">
+    <h1>Welcome to Fwitter!!</h1>
+    <h3>Log In Please</h3>
+    <form method="post" action="/login" >
+      <input type="text" name="username" placeholder="username"><br>
+      <input type="password" name="password" placeholder="password"><br> 
+      <input type="submit">
+      </form>
+  </body>
+</html>
