--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
 <h1>Welcome to Fwitter!</h1>
 
 <a class="button" href="/users/login">Login!</a>
-<a class="button" href="/users/create">Signup!</a>
+<a class="button" href="/users/create_user">Signup!</a>
 
 
   
