--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,6 +1,6 @@
 <h1>New Tweet:</h1>
 
-<form method="POST" action="/new" >
+<form method="POST" action="/tweets/new" >
 <label>Whatcha' got to say?</label>
 <input type="text" name="content"><br>
 <input type="submit" value="submit"><br>
