--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up Below:</h1>
 
-<form action='/create_user' method="POST">
+<form action='/users/create_user' method="POST">
 Name:
 <input type="text" name="User Name"><br>
 Email:
