--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up Below:</h1>
 
-<form action='/users/create_user' method="POST">
+<form action='/users/signup' method="POST">
 Name:
 <input type="text" name="User Name"><br>
 Email:
