--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,9 @@
-show.erb
+<p> Here are your tweets, <%= user.username%>
+<% @user.tweets.each do |tweet|%>
+<div>
+  <%= tweet.content %>
+  </div>
+  <%end%>
+
+
+
