--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,8 +1,8 @@
 <h1> Edit Tweet:</h1>
 
-<form method="POST" action="/tweets/<%=@tweet%>">
+<form method="POST" action="/tweets/<%=@tweet.id%>">
 <input id="hidden" type="hidden" name="_method" value="PATCH">
 <label>Whatcha' wannna change</label>
-<input type="text" name="content"><br>
+<input type="text" name="content" value="<%= @tweet.content%>"><br>
 <input type="submit" value="submit"><br>
 </form>
