--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,9 +1,10 @@
-<p> Here are your tweets, <%= user.username%>
-<% @user.tweets.each do |tweet|%>
-<div>
-  <%= tweet.content %>
+
+<h3> Here are your tweets</h3>
+<% @user.tweets.each do |tweet| %>
+  <div>
+    <%= tweet.content %>
   </div>
-  <%end%>
+<% end %>
 
 
 
