--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,8 @@
-<h1> My Tweets </h1>
+<p><%= @tweet.content %></p>
 
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete Tweet">
+</form>
 
-<p> <%= @tweet.content %></p>
-
-<a class="button" href="/tweets/:id/edit">edit</a>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a>
