--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,8 +1,10 @@
- <h1> Tweets<h1>
+ 
 
+<p> Welcome <%= current_user.username %></p>
+<h2> Tweets </h2>
 
- <ul>
-  <% @tweets.each_with_index do |tweet, i|%>
-  <h6><li><%= i + 1%>.<a href="/tweets/<%= tweet.id%>"><%= tweet.content %></a></li></h6>
-  <%end%>
- </ul>
+<% @tweets.each do |tweet| %>
+  <div>
+    <%= tweet.content %>
+  </div>
+<% end %>
