--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Index</h1>
+<h1>Welcome to Fwitter</h1>
 
 <a class="button" href="/login">Log In Here</a>
 <a class="button" href="/signup">Sign Up Here</a>
