--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,1 +1,11 @@
 <h1>Create User</h1>
+
+<h1>Sign Up Here!</h1>
+<%= "Must include username, email, and password" if @user && @user.errors.any? %>
+
+<form action="/signup" method="post">
+  Username: <input type="text" name="username" id="username"><br>
+  Email: <input type="text" name="email" id="email"><br>
+  Password: <input type="text" name="password" id="password"><br>
+  <input type="submit" value="Sign Up">
+</form>
