--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,8 @@
-<h1>User Login</h1>
+<h1>Log In Here:</h1>
+
+<form action="/login" method="post">
+  Username: <input type="text" name="username" id="username"><br>
+  Email: <input type="text" name="email" id="email"><br>
+  Password: <input type="text" name="password" id="password"><br>
+  <input type="submit" value="Log In">
+</form>
