--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,10 +1,9 @@
-<h1>Tweets Tweets</h1>
-
-<%= params %>
+<h1>Welcome, <%= session["username"] %></h1>
 
 
 
 
+<a class="button" href="/logout">Logout</a>
 <h3>(For Testing Purposes:)</h3>
 <a class="button" href="/login">Log In Here</a>
 <a class="button" href="/signup">Sign Up Here</a>
