--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -6,3 +6,7 @@
   Password: <input type="text" name="password" id="password"><br>
   <input type="submit" value="Sign Up">
 </form>
+
+<br></br>
+
+<a class="button" href="/login">Already have a login? Log In Here</a>
