--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,3 +6,7 @@
   Password: <input type="text" name="password" id="password"><br>
   <input type="submit" value="Log In">
 </form>
+
+<br></br>
+
+<a class="button" href="/signup">Don't have a login? Sign Up Here</a>
