--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,11 @@
 <h1>Welcome, <%= session["username"] %></h1>
 
+<% @tweets.each do |tweet| %>
+<a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a>
+<br>
+<% end %>
+
+<br></br>
 
 
 
