--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,7 +4,7 @@
   Username: <input type="text" name="username" id="username"><br>
   Email: <input type="text" name="email" id="email"><br>
   Password: <input type="text" name="password" id="password"><br>
-  <input type="submit" value="Log In">
+  <input type="submit" value="submit">
 </form>
 
 <br></br>
