pass more tests

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,17 @@
 <h1>Create Tweet</h1>
+
+<form action="/tweets" method="post">
+  New Tweet: <input type="text" name="content">
+  <input type="submit" value="submit">
+</form>
+
+<br></br>
+
+<a class="button" href="/tweets">Return to All Tweets</a>
+<br>
+<a class="button" href="/logout">Logout</a>
+
+<br>
+<h3>(For Testing Purposes)</h3>
+<a class="button" href="/login">Log In Here</a>
+<a class="button" href="/signup">Sign Up Here</a>
