--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,1 +1,20 @@
 <h1>Edit Tweet</h1>
+
+
+<form method="post" action="/tweets/<%= @tweet.id %>">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <h2>Edit Tweet:<input type="text" name="content">(currently <%= @tweet.content %>)</h2>
+  <br>
+  <input type="submit" value="Edit Tweet">
+</form>
+
+<a class="button" href="/tweets/new">Create a New Tweet</a>
+<br>
+<a class="button" href="/tweets">Return to All Tweets</a>
+<br>
+<a class="button" href="/logout">Logout</a>
+
+<br>
+<h3>(For Testing Purposes)</h3>
+<a class="button" href="/login">Log In Here</a>
+<a class="button" href="/signup">Sign Up Here</a>
