--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,25 @@
 <h1>Show Tweet</h1>
+
+<h4><%= @tweet.content %></h4>
+<br></br>
+
+
+<form method="post" action="/tweets/<%= @tweet.id %>/delete">
+  <input id="hidden" type="hidden" name="_method" value="Delete Tweet">
+  <input type="submit" value="Delete Tweet">
+</form>
+
+<br>
+<a class="button" href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+<br>
+
+<a class="button" href="/tweets/new">Create a New Tweet</a>
+<br>
+<a class="button" href="/tweets">Return to All Tweets</a>
+<br>
+<a class="button" href="/logout">Logout</a>
+
+<br>
+<h3>(For Testing Purposes)</h3>
+<a class="button" href="/login">Log In Here</a>
+<a class="button" href="/signup">Sign Up Here</a>
