--- a/app/views/users/show_tweets.erb
+++ b/app/views/users/show_tweets.erb
@@ -9,6 +9,8 @@
 
 <br>
 
+<a class="button" href="/tweets/new">Create a New Tweet</a>
+<br>
 <a class="button" href="/tweets">Return to All Tweets</a>
 <br>
 <a class="button" href="/logout">Logout</a>
