--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -5,7 +5,7 @@
   <input id="hidden" type="hidden" name="_method" value="patch">
   <h2>Edit Tweet:<input type="text" name="content">(currently <%= @tweet.content %>)</h2>
   <br>
-  <input type="submit" value="Edit Tweet">
+  <input type="submit" value="submit">
 </form>
 
 <a class="button" href="/tweets/new">Create a New Tweet</a>
