--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -3,7 +3,7 @@
 <form action="/signup" method="post">
   Username: <input type="text" name="username" id="username"><br>
   Email: <input type="text" name="email" id="email"><br>
-  Password: <input type="text" name="password" id="password"><br>
+  Password: <input type="password" name="password" id="password"><br>
   <input type="submit" value="Sign Up">
 </form>
 
