add form with username and submit

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,1 +1,8 @@
-signup.erb
+<h1>Signup for Fwitter</h1>
+
+<form>
+  <label>Username:</label>
+  <input type="text" name="username" id="username">
+
+  <input type="submit" value="Signup">
+</form>
