--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,8 +1,8 @@
 <h1>Signup for Fwitter</h1>
 
-<form>
+<form method="POST" action="/signup">
   <label>Username:</label>
-  <input type="text" name="username" id="username">
+  <input type="text" name="username" id="user_id">
 
   <input type="submit" value="Signup">
 </form>
