add email and password to form

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -3,6 +3,10 @@
 <form method="POST" action="/signup">
   <label>Username:</label>
   <input type="text" name="username" id="user_id">
+  <label>Email:</label>
+  <input type="email" name="email">
+  <label>Password:</label>
+  <input type="password" name="password">
 
   <input type="submit" value="Signup">
 </form>
