--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -2,7 +2,7 @@
 
 <form method="POST" action="/signup">
   <label>Username:</label>
-  <input type="text" name="username" id="user_id" required>
+  <input type="text" name="username" id="user_id">
   <label>Email:</label>
   <input type="email" name="email">
   <label>Password:</label>
