edit variable to represent all tweets

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,4 @@
 <h1>Welcome, </h1>
-<% @user_tweets.each do |tweet| %>
+<% @tweets.each do |tweet| %>
   <p><%= tweet.user.username %> - <%= tweet.content %></p>
-<% end %>
+<% end %> 
