add submit id to form

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -8,5 +8,5 @@
   <label>Password:</label>
   <input type="password" name="password">
 
-  <input type="submit" value="Login">
+  <input type="submit" value="Login" id="submit">
 </form>
