--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,4 @@
-<h1>Welcome, </h1>
+<h1>Welcome, @<%= current_user.username %>!</h1>
 <% @tweets.each do |tweet| %>
   <p><%= tweet.user.username %> - <%= tweet.content %></p>
 <% end %>
