--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,8 @@
-create_tweet.erb
+<h1>What's on your mind?</h1>
+
+<form>
+  <label>Tweet</label>
+  <input type="text" name="content">
+
+  <input type="submit" value="submit">
+</form>
