set method to post and action to /tweets for form

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,6 @@
 <h1>What's on your mind?</h1>
 
-<form>
+<form method="POST" action="/tweets">
   <label>Tweet</label>
   <input type="text" name="content">
 
