--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,5 @@
 
-<% @tweets.each do |tweet| %>
+<% @user.tweets.each do |tweet| %>
   <a href="/users/<%=@user.username%>"><%=@user.username%></a><br>
   <%=tweet.content%><br>
   <br><br>
