--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,1 +1,8 @@
-edit_tweet.erb
+<h1>Edit Tweet</h1>
+
+<form method="POST" action="/tweets/<%= @tweet.id %>">
+  <label>Tweet</label>
+  <input type="text" name="content" value="<%= @tweet.content %>">
+
+  <input type="submit" value="submit">
+</form>
