--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,3 @@
 <%= @tweet.content %>
+<p><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a> - 
+<a href="/tweets/<%= @tweet.id %>/delete">Delete Tweet</a></p>
