--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,6 +1,7 @@
 <h1>Edit Tweet</h1>
 
 <form method="POST" action="/tweets/<%= @tweet.id %>">
+  <input id="hidden" type="hidden" name="_method" value="patch">
   <label>Tweet</label>
   <input type="text" name="content" value="<%= @tweet.content %>">
 
