--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,10 @@
-<%= @tweet.content %>
+<a href="/tweets">Timeline</a>
+
+<p><%= @tweet.content %></p>
 <p><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a> - 
 <form method="POST" action='/tweets/<%= @tweet.id %>/delete'>
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
 </form>
+
+<a href="/logout">Logout</a>
