--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,5 @@
 <h1>Welcome, @<%= current_user.username %>!</h1>
+<a href="/tweets/new">New Tweet</a>
 <% @tweets.each do |tweet| %>
   <p><a href="/users/<%= tweet.user.username %>">@<%= tweet.user.username %></a> - <a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></p>
 <% end %>
