--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,5 @@
+<h1>@<%= @user.username %>'s Tweets</h1>
+<a href="/tweets">Timeline</a>
 <% @user.tweets.each do |tweet| %>
   <p><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></p>
 <% end %>
