add nav bar and footer to layout

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,9 +4,26 @@
   <title>Fwitter</title>
 </head>
 <body>
+  <div id="navbar">
+    <nav>
+      <% if !!current_user %>
+        <a href="/tweets">Timeline</a> - 
+        <a href="/users/<%= current_user.username %>">Profile</a> -
+        <a href="/tweets/new">New Tweet</a> -
+        <a href="/logout">Logout</a>
+      <% else %>
+        <a href="/login">Login</a> -
+        <a href="/signup"> Signup</a>
+      <% end %> 
+    </nav>
+  </div>
 <%=yield%>
-<% if !!current_user %>
-  <a href="/logout">Logout</a>
-  <% end %>
+
+  <footer>
+    &copy; 2016 Fwitter - All Rights Reserved - Designed by Branden Miller
+    <% if !!current_user %>
+      - <a href="/logout">Logout</a>
+    <% end %>
+  </footer>
 </body>
 </html>
