--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -32,7 +32,11 @@
         </div>
       </div>
     </header>
-    <%=yield%>
+    <div class="wrapper clearfix">
+      <section class="col-3 first shadow">
+      <%=yield%>
+    </section>
+    </div>
   </div>
   <footer>
     &copy; 2016 Fwitter - All Rights Reserved - Designed by Branden Miller
