--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,5 @@
 <h1>Welcome, <a href="/users/<%= current_user.username %>">@<%= current_user.username %></a>!</h1>
 <a href="/tweets/new">New Tweet</a>
 <% @tweets.each do |tweet| %>
-  <p><a href="/users/<%= tweet.user.username %>">@<%= tweet.user.username %></a> - <a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></p>
+  <section class="col-3 shadow"><a href="/users/<%= tweet.user.username %>">@<%= tweet.user.username %></a> - <a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></section>
 <% end %>
