--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,10 +1,10 @@
 <h1>What's on your mind?</h1>
-
+<section class="col-3 first shadow">
 <form method="POST" action="/tweets">
-  <label>Tweet</label>
   <input type="text" name="content">
 
   <input type="submit" value="submit">
 </form>
 
 <a href="/tweets">Cancel</a>
+</section>
