--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,11 +1,11 @@
 <h1>Edit Tweet</h1>
-
+<section class="col-3 first shadow">
 <form method="POST" action="/tweets/<%= @tweet.id %>">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  <label>Tweet</label>
   <input type="text" name="content" value="<%= @tweet.content %>">
 
   <input type="submit" value="submit">
 </form>
 
 <a href="/tweets/<%= @tweet.id %>">Cancel</a>
+</section>
