--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
 <h1>@<%= @user.username %>'s Tweets</h1>
 <% @user.tweets.each do |tweet| %>
-  <p><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></p>
+ <section class="col-3 first shadow"><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></section>
 <% end %>
