--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,5 +1,5 @@
 <h1>Signup for Fwitter</h1>
-
+<section class="col-3 first shadow">
 <form method="POST" action="/signup">
   <label>Username:</label>
   <input type="text" name="username" id="user_id">
@@ -10,3 +10,4 @@
 
   <input type="submit" value="Signup">
 </form>
+</section>
