--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,11 +1,22 @@
 <h1>Welcome, <a href="/users/<%= current_user.username %>">@<%= current_user.username %></a>!</h1>
+<section class="first col-1 shadow">
+<div id="details"><h3>Popular Tweeters</h3>
+  <% @users.each do |user| %>
+    <li>@<%= user.username %></li>
+  <% end %>
+</div>
 
-<section class="col-3 first shadow">
+</section>
+
+<section class=" col-2 shadow">
+  <h3>What's on your mind?</h3>
 <form method="POST" action="/tweets">
   <input type="text" name="content">
   <input type="submit" value="submit">
 </form>
 </section>
+
 <% @tweets.reverse.each do |tweet| %>
-  <section class="first col-3 shadow"><a href="/users/<%= tweet.user.username %>">@<%= tweet.user.username %></a> - <a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></section>
+  <section class=" col-2 shadow"><a href="/users/<%= tweet.user.username %>">@<%= tweet.user.username %></a> - <a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></section>
 <% end %>
+
