--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,24 @@
 <h1>@<%= @user.username %>'s Tweets</h1>
+
+<section class="col-1 first shadow">
+  <h3>Bio</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</section>
+<% if current_user.id == @user.id %>
+  <section class=" col-2 shadow">
+    <h3>What's on your mind?</h3>
+  <form method="POST" action="/tweets">
+    <input type="text" name="content">
+    <input type="submit" value="submit">
+  </form>
+  <% end %>
+</section>
+
 <% @user.tweets.each do |tweet| %>
- <section class="col-3 first shadow"><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></section>
+ <section class="col-2 shadow"><a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></section>
 <% end %>
