--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,7 +170,7 @@ img, video, audio, iframe, table, form {
 }
 
 .col-2 {
-  float: left;
+  float: right;
   width: 66%;
 }
 
@@ -352,6 +352,7 @@ footer {
   padding: 10px;
   background: #eee;
   border-top: 1px solid; 
+  float: bottom;
 }
 
 
