--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,7 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
 <body>
-  <div class="white-wood">
+  <div class="background-img">
     <header class="medium-fade shadow">
       <div class="wrapper">
         <div id="logo">
