--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,4 @@
-<h1>Welcome, <a href="/users/<%= current_user.username %>">@<%= current_user.username %></a>!</h1>
+<h1 class="milk-text">Welcome, <a href="/users/<%= current_user.username %>">@<%= current_user.username %></a>!</h1>
 <section class="first col-1 shadow">
 <div id="details"><h3>Popular Tweeters</h3>
   <% @users.each do |user| %>
