--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,33 +28,6 @@ figure {
   margin: 0 0 10px;
 }
 
-figcaption {
-  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
-  color: #777;
-  text-align: right;
-}
-
-table {
-  margin: 0 0 20px;
-  border-top: 1px solid #ccc;
-  border-left: 1px solid #ccc;
-}
-
-tr:nth-child(even) {
-  background: #efefef;
-}
-
-th, td {
-  padding: 10px;
-  border-right: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-}
-
-th {
-  background: #555;
-  color: white;
-}
-
 input, textarea {
   display: block;
   width: 100%;
@@ -77,14 +50,6 @@ input[type="submit"]:hover {
   background: #555;
 }
 
-iframe {
-  border: 0;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-  height: 403px;
-}
-
 .milk-text {
   font: bold 2.6em 'Elsie Swash Caps', cursive;
   color: white;
@@ -103,8 +68,8 @@ iframe {
 
 /*////////// BACKGROUNDS //////////*/
 
-.white-wood {
-  background: url(../images/white-wood.jpg) no-repeat center top;
+.background-img {
+  background: url(http://www.intrawallpaper.com/static/images/cool-background.jpg) no-repeat center top;
   background-size: cover;
 }
 
@@ -193,41 +158,6 @@ img, video, audio, iframe, table, form {
 .first {
   margin-left: 0%;
 }
-
-/*/////// SOCIAL ////////*/
-
-#social {
-  position: fixed;
-  top: 163px;
-  right: 20px;
-  width: 40px;
-  z-index: 2;
-}
-
-#social a {
-  display: block;
-  width: 40px;
-  height: 40px;
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-a.fbook, a.twit, a.gplus {
-  background: url(../images/social-icons.png) no-repeat;
-}
-
-a.fbook { background-position: 0 0; }
-a.fbook:hover { background-position: -40px 0; }
-a.fbook:active { background-position: -80px 0; }
-
-a.twit { background-position: 0 -40px; }
-a.twit:hover { background-position: -40px -40px; }
-a.twit:active { background-position: -80px -40px; }
-
-a.gplus { background-position: 0 -80px; }
-a.gplus:hover { background-position: -40px -80px; }
-a.gplus:active { background-position: -80px -80px; }
 
 /*////////// HEADER //////////*/
 
@@ -320,30 +250,6 @@ section {
   background: white;
 }
 
-/*////////// DETAILS //////////*/
-
-#details {
-  border-top: 1px solid white;
-}
-
-#details div {
-  height: 221px;
-}
-
-#details a:link, #details a:visited {
-  color: black;
-  text-decoration: none;
-}
-
-#details a:hover {
-  color: black;
-  text-decoration: underline;
-}
-
-#details a:active {
-  color: red;
-}
-
 /*////////// FOOTER //////////*/
 
 footer {
@@ -354,6 +260,3 @@ footer {
   border-top: 1px solid; 
   float: bottom;
 }
-
-
-
