--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
   <title>Fwitter</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="/css/style.css">
@@ -28,6 +30,7 @@
               <a href="/login">Login</a>
               <a href="/signup"> Signup</a>
             <% end %> 
+            <a class="menu-icon">&#9776;</a>
           </nav>
         </div>
       </div>
