--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-<h1>@<%= @user.username %>'s Tweets</h1>
+<h1 class="milk-text">@<%= @user.username %>'s Tweets</h1>
 
 <section class="col-1 first shadow">
   <h3>Bio</h3>
