--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -4,18 +4,6 @@
     width: 90%;
   }
 
-  #social {
-    position: absolute;
-    top: 82px;
-    right: 4px;
-    width: auto;
-  }
-
-  #social a {
-    display: inline-block;
-  }
-}
-
 @media only screen and (max-width: 900px) {
 
   body {
@@ -29,10 +17,6 @@
 
   #logo h2 {
     font-size: 2.2em;
-  }
-
-  #social {
-    top: 72px;
   }
 
   .col-3 p {
@@ -91,14 +75,13 @@
     padding: 60px 0 0;
   }
 
-  #social {
-    top: 60px;
-  }
 }
 
 @media only screen and (max-width: 495px) {
-  
+
   #logo h2 {
-    visibility: hidden;
+    font-size: 5em;
+    left: 15%;
   }
+  
 }
