fix background and text styling

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
-<h1>What's on your mind?</h1>
+<h1 class="milk-text">What's on your mind?</h1>
 <section class="col-3 first shadow">
 <form method="POST" action="/tweets">
   <input type="text" name="content">
