--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,4 +1,4 @@
-<h1>Edit Tweet</h1>
+<h1 class="milk-text">Edit Tweet</h1>
 <section class="col-3 first shadow">
 <form method="POST" action="/tweets/<%= @tweet.id %>">
   <input id="hidden" type="hidden" name="_method" value="patch">
