--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<h1>Login Fwitter</h1>
+<h1 class="milk-text">Login Fwitter</h1>
 <section class="col-3 first shadow">
 <form method="POST" action="/login">
   <label>Username:</label>
