--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="/css/responsive.css">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
-<body>
-  <div class="background-img">
+<body class="background-img">
+  <div>
     <header class="medium-fade shadow">
       <div class="wrapper">
         <div id="logo">
