--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,4 +1,4 @@
-<h1>Signup for Fwitter</h1>
+<h1 class="milk-text">Signup for Fwitter</h1>
 <section class="col-3 first shadow">
 <form method="POST" action="/signup">
   <label>Username:</label>
