--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,6 +58,7 @@ input[type="submit"]:hover {
 
 .milk-text a:link {
   text-decoration: none;
+  color: white;
 }
 
 .milk-text a:visited {
@@ -81,7 +82,7 @@ input[type="submit"]:hover {
 /*////////// BACKGROUNDS //////////*/
 
 .background-img {
-  background: url(../images/cool-background.jpg) no-repeat center top;
+  background: url(../images/cool-background.jpg) repeat center fixed;
   background-size: cover;
 }
 
@@ -265,10 +266,13 @@ section {
 /*////////// FOOTER //////////*/
 
 footer {
+  position:fixed;
+  left:0px;
+  bottom:0px;
+  width:100%;
   text-align: center; 
   font-size: 0.75em;
   padding: 10px;
   background: #eee;
-  border-top: 1px solid; 
-  float: bottom;
+  border-top: 1px solid;
 }
