--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
 <h1 class="milk-text">Welcome to Fwitter</h1>
-<a href="/signup">Signup</a>
-<a href="/login">Login</a>
+<section class="col-3 shadow first"><a href="/signup">Signup</a>
+<a href="/login">Login</a></section>
