--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,8 @@
-<h1>Welcome to Fwitter</h1>
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+  <div class="container">
+    <h1>Welcome to Fwitter!</h1> <br>
+
+    <p><a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up &raquo;</a> or <a class="btn btn-primary btn-lg" href="/login" role="button">Sign In &raquo;</a></p>
+  </div>
+</div>
