--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,1 +1,8 @@
-<h1>NEW TWEETS</h1>
+<div class="body-content ">
+  <h1>New Tweet</h1>
+
+  <form action="/tweets" method="POST">
+    <input type="text" id="content" name="content" placeholder="tweet tweet" class="tweet-input">
+    <input type="submit" id="submit" value="Tweet" class="btn btn-default">
+  </form>
+</div>
