--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -5,9 +5,10 @@
 <div class="row container-fluid">
 <h3>Please sign up to start using Fwitter:</h3>
 <form class="form-group" action="/signup" method="post">
-  <label class="control-label" for="username">Username: </label><input type="text" name="username" autofocus="true">
-  <label class="control-label"for="email">Email: </label><input type="text" name="email">
-  <label class="control-label"for="password">Password: </label><input type="text" name="password">
+  <label class="control-label" for="username">Username: </label><input type="text" name="username" autofocus="true" required="true">
+  <label class="control-label"for="email">Email: </label><input type="text" name="email" required="true">
+  <label class="control-label"for="password">Password: </label><input type="text" name="password" required="true">
+  <label class="control-label"for="password_confirmation">Confirm Password: </label><input type="text" name="password" required="true">
   <input class="btn btn-default" type="submit" value="Sign Up">
 </form>
 </div>
