--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -6,7 +6,7 @@
 <h3>Log in to your account:</h3>
 <form class="form-group" action="/login" method="post">
   <label class="control-label" for="username">Username: </label><input type="text" name="username" autofocus="true">
-  <label class="control-label" for="password">Password: </label><input type="text" name="password">
+  <label class="control-label" for="password">Password: </label><input type="password" name="password">
   <input type="submit" id="submit" value="Log In">
 </form>
 </div>
