--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -9,8 +9,7 @@
     <input type="submit" value="Delete Tweet" class="btn btn-default btn-sm">
   </form>
 
-  <form action="/tweets/<%= @tweet.id %>/edit" method="POST">
-    <input type="submit" class="btn btn-default btn-sm" value="Edit Tweet">
-  </form>
+  <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+
 
 </div>
