--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,5 @@
 <div class="body-content">
-  <h2>Welcome, <%= @user.username %></h2>
+  <h2>Welcome, <%= current_user.username %></h2>
   <h4>Tweets</h4>
 
   <a href="/tweets/new" class="btn btn-default">Add Tweet</a>
