--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,7 @@
-<h3>Welcome, <%=current_user.user_name%> </h3>
+<h3>Welcome, <%=current_user.username binding.pry%> </h3>
 <h4>Tweets:</h4>
 <ul>
-  <%@tweets.each do |t| binding.pry %>
+  <%@tweets.each do |t|  %>
     <li><%= t.content %></li>
   <%end%>
 </ul>
