--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,4 @@
-<h3>Welcome, <%=current_user.username binding.pry%> </h3>
+<h3>Welcome, <%=current_user.username %> </h3>
 <h4>Tweets:</h4>
 <ul>
   <%@tweets.each do |t|  %>
