--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,6 @@
-  <form action="/tweets/#{@tweet.id}" method="post">
+  <form action="/tweets" method="post">
     <label>Tweet:</label>
-    <input type="text" name="tweet[content]" placeholder="tweet">
+    <input type="text" name="content" placeholder="tweet">
 
-    <input type="submit" value="Create Tweet">
+    <input type="submit" value="submit">
   </form>
