--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,8 @@
-<h3><%=@user.tweet.%><h3>
+<h3><%= @tweet.content %></h3>
+
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <button type="submit" value="Delete Tweet">Delete Tweet</button>
+</form>
+
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a>
