--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,2 +1,6 @@
-<p><%=@tweet.content%><p>
-  
+<p> Here are your tweets, <%= @user.username %>
+<% @user.tweets.each do |tweet| %>
+  <div>
+    <%= tweet.content %>
+  </div>
+<% end %>
