--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,2 +1,4 @@
-<p>Welcome, </p>
+<p>Welcome, <%= @user.username %></p>
+<p><a href="/tweets/new">Create New Tweet:</a></p>
+<br>
 <a href="/logout">Log Out</a>
