--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,3 +1,4 @@
-<form method="post" action="/tweets">
-  
+<form method="post" action="/tweets/:id/new">
+  <p>New Tweet: <input type="text" name="content"></p>
+  <input type="submit" value="submit">
 </form>
