--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/tweets/:id/new">
+<form method="post" action="/tweets/new">
   <p>New Tweet: <input type="text" name="content"></p>
   <input type="submit" value="submit">
 </form>
