--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,17 @@
-<h1>Welcome to Fwitter</h1>
-<h2><a href="/signup">Sign Up</a> or <a href="/login">Log In</a></h2>
+
+<head>
+  <style>
+    div.welcome {
+    background: linear-gradient(to right, #46DAFF, #648880, #293f50);
+    width: 500px;
+    margin: auto;
+    border: solid;
+    text-align: center;
+    padding: 0px;
+    }
+  </style>
+  <div class="welcome">
+    <h1>Welcome to Fwitter</h1>
+    <h2><a href="/signup">Sign Up</a> or <a href="/login">Log In</a></h2>
+  </div>
+</head>
