--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,7 +1,22 @@
 
+<head>
+  <style>
+    div.tweet {
+    background: linear-gradient(to right, #46DAFF, #648880, #293f50);
+    width: 500px;
+    margin: auto;
+    border: solid;
+    text-align: center;
+    padding: 0px;
+    }
+  </style>
+<div class="tweet">
 <p><%= @tweet.content %></p>
 <a href="/tweets/<%= @tweet.id %>/edit"><input type="submit" value="Edit Tweet"></a>
+<br></br>
 <form action="/tweets/<%= @tweet.id %>" method="post">
 <input type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Tweet"></a>
 </form>
+</div>
+</head>
